--- a/index.html
+++ b/index.html
@@ -15,24 +15,25 @@
             <div class="break-time-control">
                 <h2>Break Time</h2>
                 <div class="btn-container">
-                    <button type="button" onclick="decrement('break-time')">-</button>
+                    <button type="button" class="left-border control-btns" onclick="decrement('break-time')">-</button>
                     <h3 id="break-time">5</h3>
-                    <button type="button" onclick="increment('break-time')">+</button>
+                    <button type="button" class="right-border control-btns" onclick="increment('break-time')">+</button>
                 </div>
             </div>
             <div class="session-time-control">
                 <h2>Session Time</h2>
                 <div class="btn-container">
-                    <button type="button" onclick="decrement('session-time')">-</button>
-                    <h3 id="session-time">25</h3>
-                    <button type="button" onclick="increment('session-time')">+</button>
+                    <button type="button" class="left-border control-btns" onclick="decrement('session-time')">-</button>
+                    <h3 id="session-time">1</h3>
+                    <button type="button" class="right-border control-btns" onclick="increment('session-time')">+</button>
                 </div>
             </div>
         </section>
 
         <section>
-            <h1 id="clock"></h1>
+            <h1 id="clock">01:00</h1>
         </section>
+        <button type="button" id="timer-toggle">Start Timer</button>
     </main>
 
 
