--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h2>Break Time</h2>
                 <div class="btn-container">
                     <button type="button" class="left-border control-btns" onclick="decrement('break-time')">-</button>
-                    <h3 id="break-time">5</h3>
+                    <input id="break-time" type="text" value="5">
                     <button type="button" class="right-border control-btns" onclick="increment('break-time')">+</button>
                 </div>
             </div>
@@ -24,14 +24,17 @@
                 <h2>Session Time</h2>
                 <div class="btn-container">
                     <button type="button" class="left-border control-btns" onclick="decrement('session-time')">-</button>
-                    <h3 id="session-time">1</h3>
+                    <input id="session-time" type="text" value="25">
                     <button type="button" class="right-border control-btns" onclick="increment('session-time')">+</button>
                 </div>
             </div>
         </section>
 
         <section>
-            <h1 id="clock">01:00</h1>
+            <h1 id="clock">25:00</h1>
+            <audio id="audio">
+                <source src="music1.mp3" type="audio/mpeg"></source>
+            </audio>
         </section>
         <button type="button" id="timer-toggle">Start Timer</button>
     </main>
