--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
             <div class="break-time-control">
                 <h2>Break Time</h2>
                 <div class="btn-container">
-                    <button type="button" class="left-border control-btns" onclick="decrement('break-time')">-</button>
+                    <button type="button" class="left-border control-btns black" onclick="decrement('break-time')">-</button>
                     <input id="break-time" type="text" value="5">
-                    <button type="button" class="right-border control-btns" onclick="increment('break-time')">+</button>
+                    <button type="button" class="right-border control-btns black" onclick="increment('break-time')">+</button>
                 </div>
             </div>
             <div class="session-time-control">
                 <h2>Session Time</h2>
                 <div class="btn-container">
-                    <button type="button" class="left-border control-btns" onclick="decrement('session-time')">-</button>
+                    <button type="button" class="left-border control-btns black" onclick="decrement('session-time')">-</button>
                     <input id="session-time" type="text" value="25">
-                    <button type="button" class="right-border control-btns" onclick="increment('session-time')">+</button>
+                    <button type="button" class="right-border control-btns black" onclick="increment('session-time')">+</button>
                 </div>
             </div>
         </section>
@@ -35,10 +35,9 @@
             <audio id="audio">
                 <source src="music1.mp3" type="audio/mpeg"></source>
             </audio>
+            <button type="button" class="black" id="timer-toggle">Start Timer</button>
         </section>
-        <button type="button" id="timer-toggle">Start Timer</button>
     </main>
-
 
     <script src="main.js" type="text/javascript"></script>
 </body>
