Timer now displays Status ie. Session/Break

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         </section>
 
         <section>
-            <h1 id="clock">25:00</h1>
+            <div id="clock-container">
+                <h1 id="clock">25:00</h1>
+                <p id="status">Time to Work</p>
+            </div>
             <audio id="audio">
                 <source src="music1.mp3" type="audio/mpeg"></source>
             </audio>
