Music control feature added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Pomodoro Clock</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
@@ -19,6 +20,10 @@
                     <input id="break-time" type="text" value="5">
                     <button type="button" class="right-border control-btns black" onclick="increment('break-time')">+</button>
                 </div>
+            </div>
+            <div>
+                <h2>Music</h2>
+                <i id="music" class="fa fa-volume-up fa-3x" aria-hidden="true"></i>
             </div>
             <div class="session-time-control">
                 <h2>Session Time</h2>
