--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <button type="button" class="black" id="timer-toggle">Start Timer</button>
         </section>
     </main>
+    <footer><p>Crafted & Created by <a style="color: black;" href="https://nawazishali.github.io" target="_blank">Nawazish Ali</a> a student at <a style="color: black;" href="https://freecodecamp.com/nawazishali" target="_blank">FreeCodeCamp</a></p></footer>
 
     <script src="main.js" type="text/javascript"></script>
 </body>
