--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             </div>
         </section>
     </main>
-    <footer><p>Crafted & Created by <a style="color: black;" href="https://nawazishali.github.io" target="_blank">Nawazish Ali</a> a student at <a style="color: black;" href="https://freecodecamp.com/nawazishali" target="_blank">FreeCodeCamp</a></p></footer>
+    <footer>
+        <p>Crafted & Created by <a style="color: black;" href="https://nawazishali.github.io" target="_blank">Nawazish Ali</a> a student at <a style="color: black;" href="https://freecodecamp.com/nawazishali" target="_blank">FreeCodeCamp</a></p>
+    </footer>
 
     <script src="main.js" type="text/javascript"></script>
 </body>
